@startuml
' Draw.io-friendly PlantUML (no angle-bracket generics)
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam defaultFontName "Segoe UI"
left to right direction
skinparam linetype ortho

title AgriConnectMarket — CareEventRepository + referenced classes

' CareEventRepository (source)
class CareEventRepository {
  -_dbContext: AppDbContext
  +GetLastByBatchIdAsync(batchId: Guid, ct: CancellationToken = default) : Task<CareEvent>
  +GetAllByBatchAsync(batchId: Guid, ct: CancellationToken) : Task<IReadOnlyList<CareEvent>>
  +GetPreviousEventAsync(batchId: Guid, ct: CancellationToken) : Task<IReadOnlyList<CareEvent>>
}

' Repository base (generic-like renaming to avoid angle brackets)
class Repository_T {
  -_dbContext: DbContext
  +Repository(dbContext: DbContext)
  +AddAsync(entity: Object, cancellationToken: CancellationToken = default) : Task<Object>
  +DeleteAsync(entity: Object, cancellationToken: CancellationToken = default) : Task
  +GetByIdAsync(id: Object, cancellationToken: CancellationToken = default) : Task<Object?>
  +ListAllAsync(cancellationToken: CancellationToken = default) : Task<IReadOnlyList<Object>>
  +UpdateAsync(entity: Object, cancellationToken: CancellationToken = default) : Task
  +ListAsync(spec: ISpecification, cancellationToken: CancellationToken = default) : Task<IReadOnlyList<Object>>
  +FirstOrDefaultAsync(spec: ISpecification, cancellationToken: CancellationToken = default) : Task<Object?>
  +CountAsync(spec: ISpecification, cancellationToken: CancellationToken = default) : Task<int>
}

' Interfaces
interface IRepository_T {
  +GetByIdAsync(id: Object, cancellationToken: CancellationToken = default) : Task<Object?>
  +ListAllAsync(cancellationToken: CancellationToken = default) : Task<IReadOnlyList<Object>>
  +AddAsync(entity: Object, cancellationToken: CancellationToken = default) : Task<Object>
  +UpdateAsync(entity: Object, cancellationToken: CancellationToken = default) : Task
  +DeleteAsync(entity: Object, cancellationToken: CancellationToken = default) : Task
  +ListAsync(spec: ISpecification, cancellationToken: CancellationToken = default) : Task<IReadOnlyList<Object>>
  +FirstOrDefaultAsync(spec: ISpecification, cancellationToken: CancellationToken = default) : Task<Object?>
  +CountAsync(spec: ISpecification, cancellationToken: CancellationToken = default) : Task<int>
}

interface ICareEventRepository {
  +GetLastByBatchIdAsync(batchId: Guid, ct: CancellationToken = default) : Task<CareEvent>
  +GetAllByBatchAsync(batchId: Guid, ct: CancellationToken) : Task<IReadOnlyList<CareEvent>>
  +GetPreviousEventAsync(batchId: Guid, ct: CancellationToken) : Task<IReadOnlyList<CareEvent>>
}

' AppDbContext (DbContext subclass)
class AppDbContext {
  +Accounts: DbSet<Account>
  +Profiles: DbSet<Profile>
  +Farms: DbSet<Farm>
  +Addresses: DbSet<Address>
  +Seasons: DbSet<Season>
  +Categories: DbSet<Category>
  +Products: DbSet<Product>
  +ProductBatches: DbSet<ProductBatch>
  +BatchCodeSequences: DbSet<BatchCodeSequence>
  +Carts: DbSet<Cart>
  +CartItems: DbSet<CartItem>
  +Orders: DbSet<Order>
  +OrderItems: DbSet<OrderItem>
  +PreOrders: DbSet<PreOrder>
  +SaveChangesAsync(cancellationToken: CancellationToken = default) : Task<int>
  +OnModelCreating(modelBuilder: ModelBuilder) : void
}

' Specification evaluator and spec interface
class SpecificationEvaluator {
  +GetQuery(inputQuery: IQueryable, spec: ISpecification) : IQueryable
}

interface ISpecification {
  +Criteria: Expression<Func<Object,bool>>?
  +Includes: List<Expression<Func<Object,Object>>>
  +OrderBy: Expression<Func<Object,Object>>?
  +OrderByDesc: Expression<Func<Object,Object>>?
  +Skip: int?
  +Take: int?
}

' Domain entities referenced by repository
class CareEvent {
  +Id: Guid
  +BatchId: Guid
  +EventTypeId: Guid
  +OccurredAt: DateTime
  +Payload: string
  +Hash: string {private set}
  +PrevHash: string {private set}
  +EventType: CareEventType
  +Batch: ProductBatch
  +Create(batchId: Guid, typeId: Guid, occurredAt: DateTime, payload: string, hash: string, prevHash: string) : CareEvent
}

class CareEventType {
  +Id: Guid
  +EventTypeName: string
  +EventTypeDesc: string
  +CareEvents: ICollection<CareEvent>
  +Create(name: string, description: string) : CareEventType
}

class ProductBatch {
  +Id: Guid
  +BatchCode: BatchCode
  +TotalYield: decimal
  +AvailableQuantity: decimal
  +Units: string
  +Price: decimal
  +PlantingDate: DateTime
  +HarvestDate: DateTime
  +SeasonId: Guid
  +Season: Season
  +ImageUrls: IReadOnlyCollection<ProductBatchImage>
  +Create(seasonId: Guid, totalYield: decimal, availableQuantity: decimal, plantingDate: DateTime, price: decimal, units: string = "kg") : ProductBatch
  +SetBatchCode(code: BatchCode) : void
  +UpdateInventory(soldQuantity: decimal) : void
  +AddImage(image: ProductBatchImage) : void
}

' Associations and inheritance
CareEventRepository ..|> Repository_T
Repository_T ..|> IRepository_T
CareEventRepository ..|> ICareEventRepository
Repository_T --> DbContext : uses
Repository_T --> SpecificationEvaluator : uses
AppDbContext ..|> DbContext
AppDbContext --> ProductBatch : "DbSet<ProductBatch>"
AppDbContext --> CareEvent : "DbSet<CareEvent> (implicit via Set<T>)"
CareEvent --> CareEventType : "eventType (1)"
CareEvent --> ProductBatch : "batch (1)"

note top of CareEventRepository
Private ( - ): Chỉ class cùng nội bộ / class instance dùng nội bộ.
Public ( + ): Có thể dùng bởi mọi class khác.
Protected ( # ): Được dùng bởi class con.
Package/Default (~): Dùng trong cùng package / assembly.
end note

@enduml